# rs-web-api-service-auto-sub-demo

./: Cargo.toml  README.md
auto_service/: Cargo.toml
auto_service/src/: lib.rs
src/: main.rs
src/services/scopes/: hello.rs
