[package]
name = "auto_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
actix-web = {version="4.0.1"}
quote = {version="1.0"}
syn = {version="1.0", features=["full"]}
